# generator

./: CMakeLists.txt
cmake/: CMakeLists.txt  stdgenerator-config.cmake.in
include/: CMakeLists.txt  __generator.hpp
tests/: nested_test.cpp
